[ADD] 공유일기 반환값 수정